# RBAC-Chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: access_control.py  chatbot_ui.py  load_documents.py  main.py
app/schemas/: ChatRequest.py
app/services/: auth.py  chat.py
app/utils/: access_control.py  build_vectorstore.py  load_documents.py  load_vectorstore.py  rag.py
backend/: main.py  render.yaml  requirements.txt
backend/services/: auth.py  chat.py
backend/utils/: build_vectorstore.py  load_vectorstore.py  rag.py
frontend/: chatbot_ui.py  render.yaml  requirements.txt
resources/data/hr/: hr_data.csv
